sidenav collapse up part done

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         <div id="mySidenav" class="sidenav">
             <a href="#" class="sidebtn-collapse"><i class="fas fa-angle-left text-light" onclick="closeNav()"></i></a>
             <div class="sidenav-collapse">
-                <div class="d-flex flex-row">            
+                <div class="d-flex flex-row justify-content-center">            
                     <a href="#" class="dq-sm-logo"><img src="./images/Logo/logoIco.png" alt=""></a>
                     <a href="#" class="dq-lg-logo"><img src="./images/Logo/logo-2.png" alt=""></a>
                     </div>
                 <div class="sidenav-logo-collapse">
                
-                <a href="#"><i class="fas fa-leaf text-info"></i>贊助我們</a>
-                <a href="#"><i class="fas fa-bars"></i>文章總覽</a>
-                <a href="#"><i class="fas fa-search"></i>搜尋文章</a>
-                <a href="#"><i class="far fa-clock"></i>地球24小時</a>
-                <a href="#"><i class="fas fa-gift"></i>地球商號</a>
+                <a href="#" class="d-flex flex-wrap align-items-center sidenav-logo-collapse-a"><i class="fas fa-leaf text-info"></i><p>贊助我們</p></a>
+                <a href="#" class="d-flex flex-wrap align-items-center sidenav-logo-collapse-a"><i class="fas fa-bars logo-white"></i><p>文章總覽</p></a>
+                <a href="#" class="d-flex flex-wrap align-items-center sidenav-logo-collapse-a"><i class="fas fa-search logo-white"></i><p>搜尋文章</p></a>
+                <a href="#" class="d-flex flex-wrap align-items-center sidenav-logo-collapse-a"><i class="far fa-clock logo-white"></i><p>地球24小時</p></a>
+                <a href="#" class="d-flex flex-wrap align-items-center sidenav-logo-collapse-a"><i class="fas fa-gift logo-white"></i><p>地球商號</p></a>
            
             </div>
         </div>
