sidenav changed into position sticky but position shifted

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <a href="#" class="flip"><i class="fas fa-power-off"></i></a>
             <a href="#"><i class="fas fa-heart"></i></a>
             <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#" class="sidenav-bottom"><i class="fas fa-comment"></i></a>
+            <a href="#"><i class="fas fa-comment"></i></a>
+            <div class="sidenav-bottom"></div>
+
             <a href="#"><i class="fas fa-info-circle"></i></a>
             <a href="#"><i class="fas fa-book"></i></a>
             </div>
