--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </div>
     </header>
     
-        <div id="mySidenav-fixed" class="sidenav-fixed">
+        <div id="mySidenav-fixed" class="sidenav-fixed sidenav-fixed-display">
             <a href="#" class="sidebtn"><i class="fas fa-angle-right text-light" onclick="openNav()"></i></a>
-            <div class="dq-sm-logo">            
+            <div class="dq-sm-logo dq-sm-logo-fixed">            
             <a href="#"><img src="./images/Logo/logoIco.png" alt=""></a>
             </div>
             <div class="sidenav-logo d-flex flex-column flex-nowrap">
@@ -51,13 +51,13 @@
 
 
 
-<sidebar>
+<sidebar class="sidebar">
     <div class="sidenav-overflow">
         <div id="mySidenav" class="sidenav">
          
            <div class="d-flex flex-row logo-sticky sticky-container">  
                   <a href="#" class="sidebtn-collapse"><i class="fas fa-angle-left text-light" onclick="closeNav()"></i></a> 
-                    <a href="#" class="dq-sm-logo"><img src="./images/Logo/logoIco.png" alt=""></a>
+                    <a href="#" class="dq-sm-logo dq-sm-logo-collapse"><img src="./images/Logo/logoIco.png" alt=""></a>
                     <a href="#" class="dq-lg-logo"><img src="./images/Logo/logo-2.png" alt=""></a>
                     </div>
             <div class="sidenav-collapse">
@@ -139,11 +139,11 @@
         <div class="sidenav-collapse-middle">
         <a href="#" class="sidenav-img sidenav-img-1 dropout">
         <p>一萬篇達成，你我一起走過的DQ</p>
-        <div class="dropout-item">
-            <div class="dropout-triangle"></div>
+        <!-- <div class="dropout-item2">
+            <div class="dropout-triangle2"></div>
             <div class="dropout-text">
                 一萬篇達成，你我一起走過的DQ</div>        
-        </div> 
+        </div>  -->
         </a>
 
         <a href="#" class="sidenav-img sidenav-img-2">
