--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>  
           
 <div id="main">
-        <div id="main-top" class="main-top d-flex justify-content-start sticky-top">
+        <div id="main-top" class="main-top d-flex justify-content-start">
             <div class="main-text">
                 <i class="fas fa-bars"></i>
                 文章總覽
