--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
         <div id="main-content" class="main-content d-flex flex-wrap">
             <div class="content-box">
-                <a href="" class="text-dark">
+                <a href="./content.html" class="text-dark">
                 <img src="./images/Content/5ea6b2bf23192.jpg" alt="">
                 <p>2020-4-28 13:00:00</p>
                 <h1>被偷名畫都到哪去了?前竊賊現身分享</h1>
